fix issue where images are not showing up in npm run preview

--- a/src/styles/sections/_intro.scss
+++ b/src/styles/sections/_intro.scss
@@ -53,7 +53,7 @@
   &__hello {
     font-weight: 300;
     .wave-hand {
-      background-image: url('./img/emojis/wave.png');
+      background-image: url('/img/emojis/wave.png');
       margin-left: 10px;
       cursor: pointer;
 
@@ -108,7 +108,7 @@
     }
     .emoji {
       &.pointer {
-        background-image: url('./img/emojis/pointright.png');
+        background-image: url('/img/emojis/pointright.png');
         width: 30px;
         height: 30px;
         margin: 0 5px;
